Fix title color gradient to be visible

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
   --accent: 136, 58, 234;
   --accent-light: 224, 204, 250;
   --accent-dark: 179, 130, 194;
-  --light-accent-gradient: linear-gradient(
+  --accent-gradient: linear-gradient(
     45deg,
     rgb(var(--accent)),
     rgb(var(--accent-dark)) 30%,
